[package]
name = "dsc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["desktop"] }
regex = "1.5.6"
[[bin]]
name = "dsc"
path = "src\\main\\main.rs"
[[test]]
name = "main_test"
path = "src\\test\\main_test.rs"
